projects/lungmen.akn/src/apps/jellyfin/security/network-policy.allow-jellyfin-from-cilium-gateway.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  annotations:
    policy.networking.k8s.io/description: |
      Allows the Cilium Gateway API to route traffic to the Jellyfin application.
      Traffic proxied by Cilium Gateway API carries the reserved:ingress identity,
      as per https://docs.cilium.io/en/latest/security/policy/layer3/#entities-based
  name: allow-jellyfin-from-cilium-gateway
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: jellyfin
  ingress:
    - fromEntities:
        - ingress
      toPorts:
        - ports:
            - port: "8096"
              protocol: TCP
