projects/lungmen.akn/src/apps/jellyfin/security/network-policy.allow-jellyfin-from-envoy-gateway.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  annotations:
    policy.networking.k8s.io/description: |
      Allows Envoy Gateway to route traffic to Jellyfin application.
  name: allow-jellyfin-from-envoy-gateway
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: jellyfin
  ingress:
    - fromEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: in-gateway-system
      toPorts:
        - ports:
            - port: "8096"
              protocol: TCP
