projects/lungmen.akn/src/apps/jellyfin/security/network-policy.allow-jellyfin-to-internet.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  annotations:
    policy.networking.k8s.io/description: |
      Allows Jellyfin to access the internet on some addresses.
  name: allow-jellyfin-to-internet
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: jellyfin
  egress:
    - toFQDNs:
        - matchName: repo.jellyfin.org
        - matchPattern: '*.mirror.jellyfin.org'
        - matchName: image.tmdb.org
        - matchName: raw.githubusercontent.com
        - matchName: github.com
      toPorts:
        - ports:
            - port: "443"
              protocol: TCP
