projects/lungmen.akn/src/apps/jellyfin/security/network-policy.allow-jellyfin-to-sso.yaml
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  annotations:
    policy.networking.k8s.io/description: >
      Allows Jellyfin to access SSO for authentication.
      Permits outbound HTTPS connections to sso.chezmoi.sh on port 443.
  name: allow-jellyfin-to-sso
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: jellyfin
  egress:
    - toFQDNs:
        - matchName: sso.chezmoi.sh
      toPorts:
        - ports:
            - port: "443"
              protocol: TCP
          serverNames:
            - sso.chezmoi.sh
